--- a/DYiBan/ShareBook-Info.plist
+++ b/DYiBan/ShareBook-Info.plist
@@ -14,7 +14,7 @@
 	<string>cn.loopool.sharebook</string>
 	<key>CFBundleIdentifier - 2</key>
 	<string>com.irnovation.books</string>
-	<key>CFBundleIdentifier - dev</key>
+	<key>CFBundleIdentifier - 3</key>
 	<string>cn.loopool.sharebook</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
