--- a/DYiBan/ShareBook-Info.plist
+++ b/DYiBan/ShareBook-Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleIconFiles</key>
 	<array/>
 	<key>CFBundleIdentifier</key>
-	<string>com.irnovation.books</string>
+	<string>cn.loopool.sharebook</string>
 	<key>CFBundleIdentifier - 2</key>
 	<string>com.irnovation.books</string>
 	<key>CFBundleIdentifier - 4</key>
