--- a/DYiBan/ShareBook-Info.plist
+++ b/DYiBan/ShareBook-Info.plist
@@ -5,16 +5,16 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>zh_CN</string>
 	<key>CFBundleDisplayName</key>
-	<string>ShareBook</string>
+	<string>乐圃图书</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFiles</key>
-	<array/>
+	<array>
+		<string>icon57.png</string>
+		<string>icon120.png</string>
+		<string>icon114.png</string>
+	</array>
 	<key>CFBundleIdentifier</key>
-	<string>cn.loopool.sharebook</string>
-	<key>CFBundleIdentifier - 2</key>
-	<string>com.irnovation.books</string>
-	<key>CFBundleIdentifier - 4</key>
 	<string>cn.loopool.sharebook</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
@@ -27,7 +27,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>3.0.2</string>
+	<string>1.0.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleURLTypes</key>
@@ -54,7 +54,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>3.0.2</string>
+	<string>1.0.0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -71,7 +71,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>infobundle</key>
-	<string>cn.loopool.sharebook</string>
 </dict>
 </plist>
